--- a/package.json
+++ b/package.json
@@ -9,8 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/clear": "^0.1.0",
+    "@types/figlet": "^1.2.0",
+    "@types/inquirer": "^6.5.0",
     "@types/node": "^10.14.1",
-    "typescript": "^3.0.3"
+    "@types/unzipper": "^0.10.3",
+    "chalk": "^3.0.0",
+    "clear": "^0.1.0",
+    "clui": "^0.3.6",
+    "figlet": "^1.3.0",
+    "inquirer": "^7.1.0",
+    "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
+    "touch": "^3.1.0",
+    "typescript": "^3.0.3",
+    "unzipper": "^0.10.10"
   },
   "directories": {
     "lib": "lib"
