--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onView:solvenv",
-		"onCommand:solvenv.init"
+		"onView:solvenv.sessions",
+		"onView:solvenv.problems",
+		"onCommand:solvenv.new_session"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -29,14 +30,29 @@
 				{
 					"id": "solvenv.sessions",
 					"name": "Sessions"
+				},
+				{
+					"id": "solvenv.problems",
+					"name": "Problems"
 				}
 			]
 		},
+		"viewsWelcome": [
+			{
+				"view": "solvenv.sessions",
+				"contents": "No session found\n[Create Session](command:solvenv.new_session)"
+			}
+		],
 		"menus": {
 			"view/title": [
 				{
-					"command": "solvenv.init",
-					"when": "true",
+					"command": "solvenv.new_session",
+					"when": "view == solvenv.sessions",
+					"group": "navigation"
+				},
+				{
+					"command": "solvenv.new_problem",
+					"when": "view == solvenv.problems",
 					"group": "navigation"
 				},
 				{
@@ -48,6 +64,11 @@
 				{
 					"command": "solvenv.helloWorld",
 					"when": "true",
+					"group": "inline"
+				},
+				{
+					"command": "solvenv.open_session",
+					"when": "view == solvenv.sessions",
 					"group": "inline"
 				},
 				{
@@ -66,11 +87,27 @@
 				}
 			},
 			{
-				"command": "solvenv.init",
+				"command": "solvenv.new_session",
 				"title": "Create new session",
 				"icon": {
 					"light": "resources/light/add_session-black-18dp.svg",
 					"dark": "resources/dark/add_session-white-18dp.svg"
+				}
+			},
+			{
+				"command": "solvenv.open_session",
+				"title": "Open session",
+				"icon": {
+					"light": "resources/light/launch_session-black.svg",
+					"dark": "resources/dark/launch_session-white.svg"
+				}
+			},
+			{
+				"command": "solvenv.new_problem",
+				"title": "Add new problem",
+				"icon": {
+					"light": "resources/light/add-black.svg",
+					"dark": "resources/dark/add-white.svg"
 				}
 			}
 		]
@@ -87,6 +124,7 @@
 		"@types/chai": "^4.2.13",
 		"@types/clear": "^0.1.0",
 		"@types/figlet": "^1.2.0",
+		"@types/fs-extra": "^9.0.2",
 		"@types/glob": "^7.1.3",
 		"@types/inquirer": "^6.5.0",
 		"@types/mocha": "^8.0.0",
@@ -101,6 +139,7 @@
 		"clui": "^0.3.6",
 		"eslint": "^7.9.0",
 		"figlet": "^1.3.0",
+		"fs-extra": "^9.0.1",
 		"glob": "^7.1.6",
 		"inquirer": "^7.1.0",
 		"lodash": "^4.17.15",
