--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
+		"@types/browserify": "^12.0.36",
 		"@types/chai": "^4.2.13",
 		"@types/clear": "^0.1.0",
 		"@types/figlet": "^1.2.0",
@@ -133,6 +134,7 @@
 		"@types/vscode": "^1.50.0",
 		"@typescript-eslint/eslint-plugin": "^4.1.1",
 		"@typescript-eslint/parser": "^4.1.1",
+		"browserify": "^17.0.0",
 		"chai": "^4.2.0",
 		"chalk": "^3.0.0",
 		"clear": "^0.1.0",
